# hidrowebsdk

./: .buildinfo  README.md  genindex.html  hidrowebsdk.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  hidrowebsdk.doctree  index.doctree
.github/workflows/: documentation.yml  pypi.yml
_modules/: index.html
_modules/hidrowebsdk/: client.html
_sources/: hidrowebsdk.rst.txt  index.rst.txt
docs/: conf.py  index.rst
examples/: basic_usage.py
hidrowebsdk/: __init__.py  client.py  config.py  exceptions.py  models.py  utils.py
tests/: __init__.py  conftest.py  test_basic.py  test_estacoes.py  test_estados.py  test_telemetric.py
