[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hidrowebsdk"
version = "0.1.0"
description = "Python SDK to communicate with ANA's HidroWeb API for hydrological and pluviometric data"
authors = [
    {name = "NVXtech", email = "contact@nvxtech.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ana", "hidroweb", "hydrology", "pluviometry", "api", "sdk", "brazil"]
dependencies = [
    "requests>=2.25.0",
    "pandas>=1.3.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/NVXtech/hidrowebsdk"
Repository = "https://github.com/NVXtech/hidrowebsdk"
Issues = "https://github.com/NVXtech/hidrowebsdk/issues"
Documentation = "https://github.com/NVXtech/hidrowebsdk#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["hidrowebsdk*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true